# entanglement-as-constraint

./: .gitignore  README.md  pyproject.toml
docs/: claims.md  glossary.md
examples/: chsh_realtime.py  locality_null.py  werner_threshold.py
notebooks/: chsh_realtime.ipynb  locality_null.ipynb  werner_threshold.ipynb
src/eac/: __init__.py  chsh.py  measure.py  simulate.py  states.py
tests/: test_chsh_violation.py  test_no_signaling.py  test_werner_threshold.py
